<resources>
    <string name="app_name" translatable="true">Etmaen</string>
    <string name="full_name" translatable="true">Name</string>
    <string name="contact_number" translatable="true">Contact phone number 9665########</string>
    <string name="upload" translatable="true">Upload</string>
    <string name="classification" translatable="true">Lost Persons List</string>
    <string name="guardian1" translatable="true"> Guardian</string>
    <string name="guardian" translatable="true">Add Related Person</string>
    <string name="verify" translatable="true">Help Lost Person</string>
    <string name="add_face" translatable="true">New Registration</string>
    <string name="error_name" translatable="true">Length name is required between 2 to 20</string>
    <string name="error_contact_number" translatable="true">Contact number is required as 9665#######</string>
    <string name="uploadImages" translatable="true">Set your image</string>
    <string name="msg_loading" translatable="true">Loading…</string>
    <string name="name" translatable="true">Name</string>
    <string name="address" translatable="true">Address</string>
    <string name="phone_number" translatable="true">Phone number</string>
    <string name="resend_message" translatable="true">RESEND MESSAGE</string>
    <string name="added_items" translatable="true">Persons Added List</string>
    <string name="current_location" translatable="true">Current location</string>
    <string name="current_address" translatable="true">Current address</string>
    <string name="not_available" translatable="true">Not available</string>
    <string name="select_image" translatable="true">Error: please select an image</string>
    <string name="permission_denied" translatable="true">Permission denied, the permissions are very important for the apps usage</string>
    <string name="sorry_error" translatable="true">Sorry, there was an error!</string>
    <string name="no_face_matching" translatable="true">Error: No face matching from records</string>
    <string name="person_found" translatable="true">Successfully person found</string>
    <string name="error_find_face" translatable="true">Error: finding face</string>
    <string name="is_found" translatable="true">, found: </string>
    <string name="record_deleted_success" translatable="true">Record deleted successfully</string>
    <string name="alrady_exist" translatable="true">Error: Face Already Exist</string>
    <string name="error_no_face" translatable="true">Error: Invalid Image, No face detected in the image</string>
    <string name="successfully_created" translatable="true"> Person Add successfully</string>
    <string name="error_deleting1" translatable="true">Error: Invalid Delete </string>
    <string name="error_detect1" translatable="true">Error: Invalid Detect face</string>
    <string name="error_find1" translatable="true">Error: Invalid Find Person</string>
    <string name="error_add_face1" translatable="true">Error: Invalid Add Person </string>
    <string name="error_detils1" translatable="true">Error: Invalid Fetching record </string>
    <string name="error_deleting2" translatable="true">Error: Invalid request Delete please check your connection</string>
    <string name="error_detect2" translatable="true">Error: Invalid request Detect Face please check your connection</string>
    <string name="error_find2" translatable="true">Error: Invalid request Find Similar please check your connection</string>
    <string name="error_add_face2" translatable="true">Error: Invalid request Add Person please check your connection</string>
    <string name="error_detils2" translatable="true">Error: Invalid request Fetching record please check your connection </string>

    <string name="succees_fetch_details" translatable="true">Successfully Fetch Details</string>
     <string name="pick_gallery" translatable="true">Pick from gallery</string>
    <string name="click_camera" translatable="true">Click from camera</string>
    <string name="remove" translatable="true">Remove image</string>

    <string name="error_space" translatable="true">Error invalid start with space </string>
    <string name="error_space1" translatable="true">Error invalid name with many space </string>

    <string name="response" translatable="true">Response</string>
    <string name="ok" translatable="true">OK</string>

    <string name="action_settings" translatable="true">Settings</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="description" translatable="true">ETMAEN is an application to help lost persons</string>
    <string name="about_us" translatable="true">ETMAEN group is a small group of developers they believe the technology can change and solve every problem.</string>
    <string name="pref_header_contact" translatable="true">Contact Us</string>
    <string name="contact_us" translatable="true">contact@etmaen.org</string>
    <string name="pref_header_about" translatable="true">Develop By</string>
    <string name="title_version" translatable="true">Version</string>
    <string name="app_version" translatable="true">1.0</string>
    <string name="app_description" translatable="true">Description</string>


    <string name="location_update" translatable="true">Started location updates!</string>
    <string name="error_location" translatable="true">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="send_success" translatable="true">successfully sent</string>
    <string name="error_not_found" translatable="true">Sorry person not found</string>
    <string name="turn_on" translatable="true"> Please turn On your location</string>
</resources>
