<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/innerBackground"
    android:id="@+id/main_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/select_image"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/image_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerInside"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:id="@+id/selectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_verify"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/verify" />

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/button_verify"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/current_location"
                    style="@style/TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:id="@+id/tv_current_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available"
                    style="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/current_address"
                    style="@style/TextAppearance.AppCompat.Caption"/>

                <TextView
                    android:id="@+id/tv_current_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_available"
                    style="@style/TextAppearance.AppCompat.Body1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/classification_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/locationLayout"
                android:textColor="@color/black"
                android:text="@string/classification"
                android:textStyle="bold"
                android:textSize="16sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/innerBackground"
                android:layout_below="@+id/classification_review"
                android:clipToPadding="false"
                android:scrollbars="vertical" />
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>