 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/innerBackground"
    android:id="@+id/main_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <ImageView
                android:id="@+id/classifier_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                app:layout_collapseMode="parallax"
                android:scaleType="centerInside"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_below="@+id/classifier_image"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/name"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:layout_below="@+id/name_value"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@+id/address"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/send_message"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_below="@+id/address_value"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/resend_message" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>