<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/innerBackground"
    android:id="@+id/main_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/select_image"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/image_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerInside"
                    app:layout_collapseMode="parallax" />

                <ImageView
                    android:id="@+id/selectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_a_photo_black_24dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_image"
                android:paddingTop="24dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">
                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/full_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">
                    <EditText
                        android:id="@+id/input_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/contact_number" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_upload"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/form"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/upload" />

            <TextView
                android:id="@+id/added_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/button_upload"
                android:text="@string/added_items"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/innerBackground"
                android:layout_below="@+id/added_text"
                android:clipToPadding="false"
                android:scrollbars="vertical" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="195dp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>